@@ -4,16 +4,14 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 public class ExampleController2 {
 
-    private Map<FullName, Integer> namesCache = new HashMap<>();
+    private final Map<FullName, Integer> namesCache = new HashMap<>();
 
 
     @GetMapping("/example2")
@@ -22,7 +20,7 @@ public class ExampleController2 {
         var fullName = new FullName(name);
         namesCache.compute(fullName, (k, v) -> (v == null) ? 0 : v + 1);
 
-        return namesCache.keySet().stream().map(FullName::getName).collect(Collectors.toList());
+        return namesCache.keySet().stream().map(FullName::getName).toList();
     }
 
 }
